syntax = "proto2";

import public "Message.proto";

package com.xuyanze.thetago.common.codec.protobuf;

//optimize_for 加快解析的速度
option optimize_for = SPEED;
option java_package = "com.xuyanze.thetago.common.codec.protobuf";
option java_outer_classname = "AiStep";


message AiStepResponse {
    optional Code code = 1;
    optional Analysis analysis = 2;
}

message Analysis {
    repeated MoveInfos moveInfos = 1;
    repeated double ownership = 2;
    optional RootInfo rootInfo = 3;
}

message MoveInfos {
    optional double prior = 1;
    optional string move = 2;
    optional int32 order = 3;
}

message RootInfo {
    optional double winrate = 1;
}



