syntax = "proto2";

package com.xuyanze.thetago.common.codec.protobuf;
option optimize_for = SPEED;
option java_package = "com.xuyanze.thetago.common.codec.protobuf";


message FrontMoveRequest {
    optional int64 timestamp = 1;

}

message FrontMoveResponse {
    optional int64 timestamp = 1;
}



