syntax = "proto2";

import public "Message.proto";

package com.xuyanze.thetago.common.codec.protobuf;
option optimize_for = SPEED;
option java_package = "com.xuyanze.thetago.common.codec.protobuf";


message GameStartRequest {
    required Player player = 1;
}

message GameStartResponse {
    required Code code = 1;
    required string senteAccid = 2;
    repeated Player player = 3;
}